# ExLauncher

./: .gitignore  CMakeLists.txt  ExLauncher.sln  LICENSE.md  README.md
Docs/Theming/: mkdocs.yml
Docs/Theming/docs/: examples.md  index.md  tutorial.md  viewref.md  views.md
ExLauncher/: Animator.cpp  Animator.h  App.cpp  App.h  AppManager.cpp  AppManager.h  DataStore.cpp  DataStore.h  ExLauncher.vcxproj  ExLauncher.vcxproj.filters  Graphics.cpp  Graphics.h  HomeDirectory.cpp  HomeDirectory.h  ResourceManager.cpp  ResourceManager.h  Theme.cpp  ThemeManager.cpp  ThemeManager.h  Xml.cpp  Xml.h  global.h  graphics.cpp  graphics.h  graphics_utils.cpp  graphics_utils.h  main.cpp  structures.cpp  structures.h  utils.cpp  utils.h
ExLauncher/App/: App.cpp  AppManager.cpp  AppManager.h  RecentApp.cpp  RecentApp.h
ExLauncher/Filesystem/: FilesystemUtils.cpp  FilesystemUtils.h  FilesystemWatchListener.cpp  FilesystemWatchListener.h  FilesystemWatchManager.cpp  FilesystemWatchManager.h
ExLauncher/Graphics/: GaussianBlur.cpp  GaussianBlur.h  Graphics.cpp  Graphics.h  graphics_utils.cpp  graphics_utils.h
ExLauncher/ScreenSystem/: DataStore.cpp  InputState.cpp  InputState.h  Screen.cpp  Screen.h  ScreenManager.cpp  ScreenManager.h
ExLauncher/Screens/: ScreenAppLaunch.cpp  ScreenAppLaunch.h  ScreenBackgroundImage.cpp  ScreenBackgroundImage.h  ScreenBrowseFilesForApp.cpp  ScreenBrowseFilesForApp.h  ScreenError.cpp  ScreenError.h  ScreenMenu.cpp  ScreenMenu.h  ScreenMessageDialog.cpp  ScreenMessageDialog.h  ScreenProgressDialog.cpp  ScreenProgressDialog.h  ScreenSettingsSelectTheme.cpp  ScreenSettingsSelectTheme.h  ScreenShutdown.cpp  ScreenShutdown.h  ScreenSystemDialog.cpp  ScreenSystemDialog.h  ScreenSystemInfo.cpp  ScreenSystemInfo.h  ScreenTest.cpp  ScreenTest.h
ExLauncher/Theme/: Theme.cpp  Theme.h  ThemeManager.cpp
ExLauncher/ViewSystem/: CollectionView.cpp  CollectionView.h  ISelectionHandler.h  LayoutHelper.cpp  LayoutHelper.h  ScrollView.cpp  ScrollView.h  View.cpp  View.h
ExLauncher/Views/: Clock.cpp  Clock.h  FramePanel.cpp  FramePanel.h  GridView.cpp  GridView.h  Image.cpp  Image.h  Label.cpp  Label.h  LinearPanel.cpp  LinearPanel.h  ListView.cpp  ListView.h  RecentAppView.cpp  RecentAppView.h  RectangleShape.cpp  RectangleShape.h  Selector.cpp  Selector.h  State.cpp  State.h  TabPanel.cpp  TabPanel.h  TabStrip.cpp  TabStrip.h
ExLauncher/data/apps/gcwzero/: dinguxcommander.xml  network.xml  o2xiv.xml  pyclock.xml  wireless.xml
ExLauncher/data/fonts/: LICENSE.txt
ExLauncher/data/graphics/: LICENSE.txt
ExLauncher/data/schema/: screen.xsd
ExLauncher/data/system/: browseFilesForAppDefault.xml  settingsSelectTheme.xml  systemMenu.xml
ExLauncher/data/themes/default/: appTemplate.xml  grid.xml  list.xml  tab.xml  test2.xml  test3.xml  test4.xml  testaction.xml  testframepanel.xml  testoverview.xml
ExLauncher/data/themes/exlauncher/: LICENSE.txt  appTemplate.xml  apps.xml  categoryTemplate.xml  recentAppTemplate.xml  start.xml  theme.xml
ExLauncher/data/themes/tabbed/: appTemplate.xml  apps.xml  main.xml  theme.xml
ExLauncher/data/themes/test/: appTemplate.xml  contentsizebug.xml  grid.xml  griditemtest.xml  list.xml  listitemtest.xml  recentAppTemplate.xml  tab.xml  test.xml  test2.xml  test3.xml  test4.xml  testaction.xml  testfonts.xml  testframepanel.xml  testlinearpanel.xml  testoverview.xml  testrecent.xml  theme.xml
ExLauncher/data/wallpapers/: LICENSE.txt
